refactor(order): 피드백 반영 - 주문 항목 저장 책임 분리 및 재고 복구 로직/관심사 침투 제거